correcting main page alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
     color: white;
     margin: 0;
     padding: 0 40px;
-    /* text-align: center; */
+    text-align: center;
 }
 
 header {
